[gd_scene load_steps=4 format=2]

[ext_resource path="res://Towers/MachineGun.png" type="Texture" id=1]
[ext_resource path="res://Towers/MachineGun.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 120.0

[node name="MachineGun" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Threat" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Threat"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="body_entered" from="Threat" to="." method="_on_Threat_body_entered"]
[connection signal="body_exited" from="Threat" to="." method="_on_Threat_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
